# haskellcalculus

./: calculus.cabal
src/: Calculus.hs  Expr.hs  Vars.hs
test/: Tests.hs
test/IC/: Approx.hs
